Rename to quick-filter

--- a/app/templates/components/quick-filter.hbs
+++ b/app/templates/components/quick-filter.hbs
@@ -1,7 +1,7 @@
 <form class="ui large form">
-  <div class="fields">
-    <div class="six wide field" style="padding-left:0px; padding-right:0px">
-      {{input value="Search for events"}}
+  <div class="ui action input fields">
+    <div class="input six wide field" style="padding-left:0px; padding-right:0px">
+      {{input placeholder="Search for events"}}
     </div>
     <div class="four wide field" style="padding-left:0px; padding-right:0px">
       {{input placeholder="Location" value="United States"}}
@@ -17,7 +17,7 @@
         <option>{{t 'This Month'}}</option>
       </select>
     </div>
-    <div class="two wide field" style="padding-left:0px; padding-right:0px padding-bottom:0px padding-top:0px">
+    <div class="ui two wide field" style="padding-left:0px; padding-right:0px padding-bottom:0px padding-top:0px">
       <button class="fluid large ui blue button" type="submit">{{t 'Search'}}</button>
     </div>
   </div>
