--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,4 +1,4 @@
-{{filter-option}}
+{{quick-filter}}
 <h2>{{t 'Upcoming Events'}}</h2>
 <div class="ui stackable three column grid">
   {{#each model as |event|}}
